[1.250] reformating - faq/faq1.html

--- a/faq/faq1.html
+++ b/faq/faq1.html
@@ -57,8 +57,8 @@ FAQ - Введение в OpenBSD
       opportunities to work with emerging technologies and an international
       community of developers and end users.
   <li>OpenBSD пытается свести к минимуму необходимость настройки.
-      Для подавляющего большинства пользователей OpenBSD <b>просто работает</b> на их
-      аппаратном обеспечении для их нужд.
+      Для подавляющего большинства пользователей OpenBSD <b>просто работает</b>
+      на их аппаратном обеспечении для их нужд.
 </ul>
 
 <h3 id="ReallyFree">Насколько OpenBSD свободна?</h3>
@@ -99,8 +99,8 @@ OpenBSD распространяется с рядом сторонних про
   <li><a href="https://www.zlib.net/">zlib</a>
 </ul>
 
-Команда OpenBSD часто добавляет изменения в сторонние компоненты, как правило,
-для улучшения безопасности или качества кода.
+Команда OpenBSD часто добавляет изменения в сторонние компоненты,
+как правило, для улучшения безопасности или качества кода.
 Много <a href="../innovations.html">инноваций</a> также включены.
 Дополнительные приложения доступны в виде <a href="faq15.html">пакетов</a>.
 
@@ -114,8 +114,8 @@ OpenBSD распространяется с рядом сторонних про
 
 <h3 id="Next">Когда будет следующий релиз?</h3>
 
-Команда OpenBSD выпускает новый примерно каждые шесть месяцев с цедевыми датами
-в мае и ноябре. Больше информации о цикле разработки можно найти
+Команда OpenBSD выпускает новый примерно каждые шесть месяцев с цедевыми
+датами в мае и ноябре. Больше информации о цикле разработки можно найти
 <a href="faq5.html#Flavors">здесь</a>.
 
 <h2 id="Platforms">Поддержка аппаратного обеспечения</h2>
@@ -145,12 +145,12 @@ OpenBSD работает на следующих <a href="../plat.html">плат
 <h2 id="ManPages">Страницы руководства</h2>
 
 OpenBSD поставляется с обширной документацией в виде страниц руководства.
-Они являются авторитетным источником информации об OpenBSD и мы прикладываем значительные
-усилия, чтобы обеспечить их актуальность и точность.
-Разработчики, добавляющие изменения в систему, должны обновлять справочные страницы
-вместе с их изменением в системный код.
-Мы ожидаем, что пользователи будут в первую очередь читать справочные страницы,
-прежде чем обращаться за помощью.
+Они являются авторитетным источником информации об OpenBSD и мы прикладываем
+значительные усилия, чтобы обеспечить их актуальность и точность.
+Разработчики, добавляющие изменения в систему, должны обновлять справочные
+страницы вместе с их изменением в системный код.
+Мы ожидаем, что пользователи будут в первую очередь читать справочные
+страницы, прежде чем обращаться за помощью.
 
 <p>
 Ниже приведен список наиболее полезных страниц для новых пользователей:
@@ -195,13 +195,13 @@ OpenBSD поставляется с обширной документацией 
 а также их можно найти в архиве <code>man75.tgz</code>.
 
 <p>
-В общем, если вы знаете имя команды или страницы руководства, вы можете
-прочитать её, выполнив <code>man command</code>.
+В общем, если вы знаете имя команды или страницы руководства,
+вы можете прочитать её, выполнив <code>man command</code>.
 Если вы не знаете имя команды
 или <code>man command</code> не находит страницу руководства,
-вы можете выполнить поиск в базе данных страниц руководства, выполнив
-<code>apropos something</code> или <code>man -k something</code>, где
-<code>something</code> - это вероятное слово, которое
+вы можете выполнить поиск в базе данных страниц руководства,
+выполнив <code>apropos something</code> или <code>man -k something</code>,
+где <code>something</code> - это вероятное слово, которое
 может присутствовать в заголовке страницы, которую вы ищете.
 
 <pre class="cmdbox">
@@ -211,12 +211,14 @@ zdump(8) - time zone dumper
 zic(8) - time zone compiler
 </pre>
 
-Цифры в скобках указывают на раздел руководства, в котором можно найти эту страницу.
-В некоторых случаях вы можете найти страницы с одинаковыми именами
-в разных разделах руководства.
-Например, предположим, что вы хотите узнать формат файлов конфигурации для демона cron.
-Как только вы узнаете раздел руководства для нужной страницы, вы выполните
-<code>man n command</code>, где n - номер раздела руководства.
+Цифры в скобках указывают на раздел руководства, в котором можно
+найти эту страницу. В некоторых случаях вы можете найти страницы
+с одинаковыми именами в разных разделах руководства.
+Например, предположим, что вы хотите узнать формат файлов
+конфигурации для демона cron.
+Как только вы узнаете раздел руководства для нужной страницы,
+вы выполните <code>man n command</code>, где n - номер раздела
+руководства.
 
 <pre class="cmdbox">
 $ <b>man -k cron</b>
@@ -228,78 +230,94 @@ $ <b>man 5 crontab</b>
 
 <h2 id="MailLists">Списки рассылки</h2>
 
-Проект OpenBSD поддерживает несколько списков рассылки, на которые пользователи
-могут подписаться.
+Проект OpenBSD поддерживает несколько почтовых рассылок,
+на которые любой желающий может подписаться.
 Самые популярные из них:
 
 <ul>
   <li><b>announce</b> - анонсы и советы по безопасности
   <li><b>bugs</b> - баги, сгенерированные при помощи
-      <a href="https://man.openbsd.org/sendbug">sendbug(1)</a>
-      и их обсуждение
+         <a href="https://man.openbsd.org/sendbug">sendbug(1)</a>
+         и их обсуждение
   <li><b>misc</b> - общие пользовательские вопросы и ответы
-  <li><b>ports</b> - обсуждение <a href="ports/ports.html">дерева портов</a>.
-  <li><b>source-changes</b> - автоматическая рассылка изменений дерева исходников в CVS
-  <li><b>tech</b> - обсуждение технических тем для разработчиков OpenBSD
-      и продвинутых пользователей
+  <li><b>ports</b> - обсуждение
+	 <a href="ports/ports.html">дерева портов</a>.
+  <li><b>source-changes</b> - автоматическая рассылка изменений
+	 дерева исходников в CVS
+  <li><b>tech</b> - обсуждение технических тем для разработчиков
+	 OpenBSD и продвинутых пользователей
 </ul>
 
-Прежде чем задать вопрос в каком-либо списке рассылки, пожалуйста, проверьте
-архивы на предмет часто задаваемых вопросов. Хотя это может быть первый раз,
-когда вы столкнулись с проблемой или вопросом, другие пользователи в списках
-рассылки, возможно, видели один и тот же вопрос несколько раз за последнюю
-неделю, и, возможно, не будут рады видеть его снова.
-Если вы задаёте вопрос, связанный с аппаратным обеспечением, то всегда включайте полный
-вывод от команды
+Прежде чем задать вопрос в каком-либо списке рассылки, пожалуйста,
+проверьте архивы на предмет часто задаваемых вопросов.
+Хотя это может быть первый раз, когда вы столкнулись с проблемой
+или вопросом, другие пользователи в списках рассылки, возможно,
+видели один и тот же вопрос несколько раз за последнюю неделю, и,
+возможно, не будут рады видеть его снова.
+Если вы задаёте вопрос, связанный с аппаратным обеспечением,
+то всегда включайте полный вывод от команды
 <a href="https://man.openbsd.org/dmesg">dmesg(8)</a>.
 
 <p>
-Вы можете найти несколько архивов, другие рекомендаций и дополнительную
-информацию на <a href="../mail.html">странице списка рассылки</a>. Подписками
-можно легко управлять через <a href="https://lists.openbsd.org">веб-интерфейс</a>.
+Вы можете найти несколько архивов, другие рекомендаций и
+дополнительную информацию на
+<a href="../mail.html">странице списка рассылки</a>.
+Подписками можно легко управлять при помощи
+<a href="https://lists.openbsd.org">веб-интерфейса</a>.
 
 <h2 id="OtherUnixes">Миграция на OpenBSD</h2>
 
-Если вы изучили Unix по любой <a href="https://www.openbsd.org/books.html">хорошей книге</a>, поняли
-философию Unix и затем расширили свои знания до конкретной платформы, вы
-обнаружите, что OpenBSD вам знакома.
+Если вы изучили Unix по любой
+<a href="https://www.openbsd.org/books.html">хорошей книге</a>,
+поняли философию Unix и затем расширили свои знания до конкретной
+платформы, вы обнаружите, что OpenBSD вам знакома.
 
 <p>
-Вот некоторые из часто встречающихся различий между OpenBSD и другими
-вариантами Unix.
+Вот некоторые из часто встречающихся различий между OpenBSD
+и другими вариантами Unix.
 
 
 
 
 <ul>
-  <li>OpenBSD - это Unix в стиле BSD, следующий дизайну 4.4BSD. Linux и Solaris
-      являются системами в стиле System V. Некоторые Unix-подобные операционные
-      системы смешивают характеристики System V и BSD. Распространенным местом,
-      где это вызывает путаницу, являются <a href="faq10.html#rc">загрузочные скрипты</a>.
-      OpenBSD использует систему <a href="https://man.openbsd.org/rc">rc(8)</a>.
-  <li>OpenBSD - это законченная система. Это не ядро плюс утилиты, которые
-      можно обновлять отдельно друг от друга.
-  <li>OpenBSD поддерживает <a href="ports/index.html">дерево портов</a> для
-      предоставления стороннего программного обеспечения.
-      Предварительно скомпилированные <a href="faq15.html">пакеты</a> создаются
-      и распространяются командой портов OpenBSD.
-  <li>OpenBSD использует CVS для отслеживания изменений исходного кода. OpenBSD
-      был первым проектом, в котором появился <a href="../anoncvs.html">анонимный
-      CVS</a>, который позволяет каждому в любое время извлечь полное дерево исходных
-      текстов для любой версии OpenBSD.
+  <li>OpenBSD - это Unix в стиле BSD, следующий дизайну 4.4BSD.
+      Linux и Solaris являются системами в стиле System V.
+      Некоторые Unix-подобные операционные системы смешивают
+      характеристики System V и BSD. Распространенным местом,
+      где это вызывает путаницу, являются
+      <a href="faq10.html#rc">загрузочные скрипты</a>.
+      OpenBSD использует систему
+      <a href="https://man.openbsd.org/rc">rc(8)</a>.
+  <li>OpenBSD - это монолитная система.
+      Это не ядро плюс утилиты, которые можно обновлять
+      отдельно друг от друга.
+  <li>OpenBSD поддерживает <a href="ports/index.html">дерево портов</a>
+      для предоставления стороннего программного обеспечения.
+      Предварительно скомпилированные
+      <a href="faq15.html">пакеты</a> создаются и
+      распространяются командой портов OpenBSD.
+  <li>OpenBSD использует CVS для отслеживания изменений исходного кода.
+      OpenBSD был первым проектом, в котором появился
+      <a href="../anoncvs.html">анонимный CVS</a>, который позволяет
+      каждому в любое время загрузить себе дерево исходников для
+      любой версии OpenBSD.
       Также есть <a href="https://cvsweb.openbsd.org">веб-интерфейс</a>.
   <li>OpenBSD проходит тщательный и непрерывный аудит безопасности для
       обеспечения качества и безопасности кода.
   <li>OpenBSD не поддерживает файловых систем с журналированием.
-  <li>OpenBSD поставляется с <a href="https://www.openbsd.org/faq/pf/index.html">фильтром сетевых пакетов</a>
-      (Packet Filter (PF)). Это означает, что трансляция сетевых адресов
-      (Network Address Translation), очереди и фильтрация обрабатываются с помощью
+  <li>OpenBSD поставляется с
+      <a href="https://www.openbsd.org/faq/pf/index.html">фильтром сетевых пакетов</a>
+      (Packet Filter (PF)).
+      Это означает, что трансляция сетевых адресов
+      (Network Address Translation), очереди и фильтрация обрабатываются
+      при помощи
       <a href="https://man.openbsd.org/pfctl">pfctl(8)</a>,
       <a href="https://man.openbsd.org/pf">pf(4)</a> и
       <a href="https://man.openbsd.org/pf.conf">pf.conf(5)</a>.
   <li>Командной оболочкой OpenBSD по умолчанию является
-      <a href="https://man.openbsd.org/ksh">ksh</a>, основанная на общедоступной
-      оболочке Корна (Korn Shell). Оболочки, такие как bash и многие другие, могут
+      <a href="https://man.openbsd.org/ksh">ksh</a>,
+      основанная на общедоступной оболочке Корна (Korn Shell).
+      Оболочки, такие как bash и многие другие, могут
       быть добавлены из <a href="faq15.html">пакетов</a>.
   <li>Устройства именуются по имени драйвера, а не по типу.
       Другими словами, нет устройств <code>eth0</code> и <code>eth1</code>.
@@ -310,16 +328,17 @@ $ <b>man 5 crontab</b>
       двухслойную систему разбиения диска, где первый уровень -
       это раздел видимый в BIOS c помощью <a href="faq14.html#fdisk">fdisk</a>,
       а второй - <a href="faq14.html#disklabel">disklabel</a>.
-  <li>Некоторые другие операционные системы рекомендуют вам настраивать ядро
-      для вашей машины. Пользователям OpenBSD рекомендуется просто использовать
-      стандартное ядро GENERIC, предоставляемое и протестированное разработчиками.
+  <li>Некоторые другие операционные системы рекомендуют вам
+      настраивать ядро для вашей машины. Пользователям OpenBSD
+      рекомендуется просто использовать стандартное ядро GENERIC,
+      предоставляемое и протестированное разработчиками.
 </ul>
 
 <h2 id="Bugs">Сообщения об ошибках</h2>
 
-Сообщение об ошибках - одна из важнейших обязанностей конечных пользователей.
+Сообщение об ошибках - одна из важнейших обязанностей пользователей.
 Для диагностики наиболее серьезных проблем требуется очень подробная
-информация. Например, следующий текст будет подходящим сообщением об ошибке:
+информация. Вот пример хорошего сообщения об ошибке:
 
 <pre class="cmdbox">
 From: user@example.com
@@ -350,38 +369,44 @@ ddb> trace
 Thank you!
 </pre>
 
-Смотрите <a href="../report.html">эту страницу</a> для получения дополнительной информации
-о создании и отправке отчетов об ошибках.
-Включите подробную информацию о том, что произошло, точную конфигурацию вашей системы
-и последовательность шагов для воспроизведения проблемы.
-Пожалуйста, используйте <a href="https://man.openbsd.org/sendbug">sendbug(1)</a>,
+Прочтите <a href="../report.html">эту страницу</a>, чтобы узнать больше
+по этой теме.
+Не забудьте указать подробную информацию о том, что произошло,
+точную конфигурацию вашей системы и последовательность шагов для
+воспроизведения проблемы.
+Пожалуйста, используйте
+<a href="https://man.openbsd.org/sendbug">sendbug(1)</a>,
 чтобы сообщать об ошибках, когда это возможно.
-В противном случае, пожалуйста, включите как минимум вывод <a href="https://man.openbsd.org/dmesg">dmesg(8)</a> вашей системы.
-Для работы команды <a href="https://man.openbsd.org/sendbug">sendbug(1)</a> требуется
-возможность отправлять электронную почту в вашей системе.
+В противном случае, пожалуйста, скопируйте как минимум вывод
+<a href="https://man.openbsd.org/dmesg">dmesg(8)</a> вашей системы.
+Для работы команды
+<a href="https://man.openbsd.org/sendbug">sendbug(1)</a> требуется
+возможность отправлять email с вашей системы.
 
 <p>
 Почтовый сервер OpenBSD использует
 <a href="https://man.openbsd.org/spamd">spamd(8)</a>
-для поддержки "серых" списков почтовых адресов, поэтому в получении почты могут
-возникать задержки, прежде чем сервер принимет ваше сообщение об ошибке.
-Пожалуйста, будьте терпеливы.
+для поддержки "серых" списков почтовых адресов, поэтому в
+получении почты могут возникать задержки, прежде чем сервер
+принимет ваше сообщение об ошибке. Пожалуйста, будьте терпеливы.
 
 <p>
-После отправки сообщения об ошибке разработчики могут связаться с вами для
-получения дополнительной информации или с просьбой протестировать изменения.
+После отправки сообщения об ошибке разработчики могут связаться
+с вами для получения дополнительной информации или с просьбой
+протестировать изменения.
 Вы также можете следить за архивами рассылки
 <a href="mailto:bugs@openbsd.org">bugs@openbsd.org</a> - детали
 на странице <a href="../mail.html">почтовой рассылки</a>.
 
 <h2 id="Support">Поддержка проекта</h2>
 
-Мы очень признательны людям и организациям, которые внесли свой вклад в проект
-OpenBSD.
+Мы очень благодарны людям и организациям,
+которые внесли свой вклад в проект OpenBSD.
 
 <p>
 Проект OpenBSD постоянно нуждается в поддержке сообщества.
-Если OpenBSD приносит вам пользу, то мы настоятельно рекомендуем вам внести свой вклад.
+Если OpenBSD приносит вам пользу, то не забывайте,
+что и вы можете сделать его лучше.
 
 <ul>
   <!--
@@ -391,21 +416,26 @@ OpenBSD.
       wearing enjoyment.
   -->
   <li><a href="https://www.openbsd.org/donations.html">Пожертвовать деньги</a>.
-      Проект постоянно нуждается в деньгах для оплаты оборудования, сетевых подключений и т.д.
+      Проект постоянно нуждается в деньгах для оплаты оборудования,
+      сетевых подключений и т.д.
       Даже небольшие пожертвования имеют огромное значение.
   <li><a href="https://www.openbsd.org/want.html">Пожертвовать аппаратуру или детали</a>.
       Проект испытывает постоянную необходимость в аппаратном обеспечении.
   <li><a href="faq5.html#Diff">Пожертвуйте ваше время и навыки</a>.
-	  Программисты, которым нравится писать операционные системы, всегда
-	  приветствуются, но есть много других способов, которыми люди могут быть
-	  полезны.
-  <li>Подписывайтесь на <a href="../mail.html">списки рассылки</a> и помогайте отвечать на
-      вопросы от других пользователей.
-  <li>Помогать поддерживать документацию и присылать новый материал для FAQ на адрес
+      Программисты, которым нравится писать операционные системы,
+      всегда приветствуются, но есть много других способов,
+      которыми люди могут быть полезны.
+  <li>Подписывайтесь на <a href="../mail.html">рассылки</a>
+      и принимайте участие в обсуждениях.
+  <li>Помогать поддерживать документацию и присылать новый
+      материал для FAQ на адрес
       <a href="mailto:misc@openbsd.org">misc@openbsd.org</a>.
-  <li>Организовать локальную <a href="https://www.openbsd.org/groups.html">группу пользователей</a> показать
-      друзьям на сколько OpenBSD классная система.
-  <li>Обратиться к работодателю с просьбой использовать OpenBSD для работы.
-      Если вы студент, то обсудить с преподавателями возможность использования OpenBSD в качестве
-      учебного инструмента для компьютерных или инженерных курсов.
+  <li>Организовать локальную
+      <a href="https://www.openbsd.org/groups.html">группу пользователей</a>
+      показать друзьям на сколько OpenBSD классная система.
+  <li>Обратиться к работодателю с просьбой использовать OpenBSD
+      для работы.
+      Если вы студент, то обсудить с преподавателями возможность
+      использования OpenBSD в качестве учебного инструмента для
+      компьютерных или инженерных курсов.
 </ul>
