[1.250] update links - faq/faq1.html

--- a/faq/faq1.html
+++ b/faq/faq1.html
@@ -101,7 +101,7 @@ OpenBSD распространяется с рядом сторонних про
 
 Команда OpenBSD часто добавляет изменения в сторонние компоненты, как правило,
 для улучшения безопасности или качества кода.
-Много <a href="https://www.openbsd.org/innovations.html">инноваций</a> также включены.
+Много <a href="../innovations.html">инноваций</a> также включены.
 Дополнительные приложения доступны в виде <a href="faq15.html">пакетов</a>.
 
 <h3 id="HowAbout">Почему <i>продукт X</i> не включен?</h3>
@@ -136,7 +136,7 @@ OpenBSD работает на следующих <a href="../plat.html">плат
   <li><a href="https://www.openbsd.org/macppc.html"   >macppc</a>
   <li><a href="https://www.openbsd.org/octeon.html"   >octeon</a>
   <li><a href="../powerpc64.html"                     >powerpc64</a>
-  <li><a href="https://www.openbsd.org/riscv64.html"  >riscv64</a>
+  <li><a href="../riscv64.html"  >riscv64</a>
   <li><a href="https://www.openbsd.org/sparc64.html"  >sparc64</a>
 </ul>
 
@@ -255,7 +255,7 @@ $ <b>man 5 crontab</b>
 
 <p>
 Вы можете найти несколько архивов, другие рекомендаций и дополнительную
-информацию на <a href="https://www.openbsd.org/mail.html">странице списка рассылки</a>. Подписками
+информацию на <a href="../mail.html">странице списка рассылки</a>. Подписками
 можно легко управлять через <a href="https://lists.openbsd.org">веб-интерфейс</a>.
 
 <h2 id="OtherUnixes">Миграция на OpenBSD</h2>
@@ -350,7 +350,7 @@ ddb> trace
 Thank you!
 </pre>
 
-Смотрите <a href="https://www.openbsd.org/report.html">эту страницу</a> для получения дополнительной информации
+Смотрите <a href="../report.html">эту страницу</a> для получения дополнительной информации
 о создании и отправке отчетов об ошибках.
 Включите подробную информацию о том, что произошло, точную конфигурацию вашей системы
 и последовательность шагов для воспроизведения проблемы.
@@ -372,7 +372,7 @@ Thank you!
 получения дополнительной информации или с просьбой протестировать изменения.
 Вы также можете следить за архивами рассылки
 <a href="mailto:bugs@openbsd.org">bugs@openbsd.org</a> - детали
-на странице <a href="https://www.openbsd.org/mail.html">почтовой рассылки</a>.
+на странице <a href="../mail.html">почтовой рассылки</a>.
 
 <h2 id="Support">Поддержка проекта</h2>
 
@@ -399,7 +399,7 @@ OpenBSD.
 	  Программисты, которым нравится писать операционные системы, всегда
 	  приветствуются, но есть много других способов, которыми люди могут быть
 	  полезны.
-  <li>Подписывайтесь на <a href="https://www.openbsd.org/mail.html">списки рассылки</a> и помогайте отвечать на
+  <li>Подписывайтесь на <a href="../mail.html">списки рассылки</a> и помогайте отвечать на
       вопросы от других пользователей.
   <li>Помогать поддерживать документацию и присылать новый материал для FAQ на адрес
       <a href="mailto:misc@openbsd.org">misc@openbsd.org</a>.
