[1.458] update links - security.html

--- a/security.html
+++ b/security.html
@@ -103,8 +103,8 @@ OpenBSD верит в стойкую безопасность. Мы стреми
 
 <p>
 Как и большинство читателей
-<a href="https://marc.info/?l=bugtraq">
-рассылки BUGTRAQ</a>, мы верим в преимущества абсолютного разглашения
+<a href="https://marc.info/?l=bugtraq">рассылки BUGTRAQ</a>,
+мы верим в преимущества абсолютного разглашения
 проблем безопасности. Среди множества операционных систем мы, похоже,
 первые кто использует такой подход. Многие производители, в том
 числе и свободного программного обеспечения, все ещё пытаются скрыть
@@ -182,7 +182,7 @@ Networks.
   <li>Chroot jailing
   <li>New uids
   <li>ProPolice
-  <li>... <a href="https://www.openbsd.org/innovations.html">и другие</a>
+  <li>... <a href="innovations.html">и другие</a>
 </ul>
 
 <li><h3 id=reward>Награда</h3>
@@ -277,7 +277,7 @@ Networks.
 
 <ul>
 <li>Если вы разбираетесь в технической стороне вопроса, следите за
-	<a href="https://www.openbsd.org/mail.html">рассылкой, про изменениях в коде</a>
+	<a href="mail.html">рассылкой, про изменениях в коде</a>
 	и не пропускайте тех из них, которые связаны с безопасностью.
 	А так как подтверждение о возможных атаках для многих изменений в коде
 	не доказана, не ожидайте, что в commit-сообщении будет сказано
