[1.371] OpenSSH 9.9 release - openssh/index.html

--- a/openssh/index.html
+++ b/openssh/index.html
@@ -51,8 +51,9 @@
  
 <p id="callout">
 
-Релиз <a href="https://www.openbsd.org/openssh/releasenotes.html#9.8p1">OpenSSH 9.8</a>
-состоялся 1 июля 2024 года
+Релиз
+<a href="https://www.openbsd.org/openssh/releasenotes.html#9.9p1">OpenSSH 9.9</a>
+состоялся 20 сентября 2024 года
 
 <p>
 OpenSSH это основной инструмент для создания соединений
