[1.644] 7.6 update - errata.html

--- a/errata.html
+++ b/errata.html
@@ -86,4 +86,5 @@
 <a href="https://www.openbsd.org/errata72.html">7.2</a>,
 <a href="https://www.openbsd.org/errata73.html">7.3</a>,
 <a href="https://www.openbsd.org/errata74.html">7.4</a>,
-<a href="https://www.openbsd.org/errata75.html">7.5</a>.
+<a href="https://www.openbsd.org/errata75.html">7.5</a>,
+<a href="https://www.openbsd.org/errata76.html">7.6</a>.
