--- a/openssh/openbsd.html
+++ b/openssh/openbsd.html
@@ -35,6 +35,25 @@ h3 {
 <p>
 Нижеперечисленные версии OpenSSH можно использовать в OpenBSD:
 
+<li><h3>OpenSSH 9.9: 20 сентября 2024 года</h3>
+
+<p>
+<a href="https://ftp.openbsd.org/pub/OpenBSD/OpenSSH/openssh-9.9.tar.gz">
+https://ftp.openbsd.org/pub/OpenBSD/OpenSSH/openssh-9.9.tar.gz</a>
+
+<pre>
+# cd /usr/src/usr.bin
+# tar zxvf .../openssh-9.9.tar.gz
+# cd ssh
+# make obj
+# make cleandir
+# make depend
+# make
+# make install
+# cp ssh_config sshd_config /etc/ssh # (необязательно)
+</pre>
+и перезагрузите sshd.
+
 <li><h3>OpenSSH 9.8: 1 июля 2024 года</h3>
 
 <p>
