--- a/rpki-client/portable.html
+++ b/rpki-client/portable.html
@@ -16,7 +16,7 @@
 <hr>
 
 <p>
-Портированная версия rpki-client 9.2 вышла 21 августа 2024 года.
+Портированная версия rpki-client 9.3 вышла 19 сентября 2024 года.
 
 <p>
 Портированная версия rpki-client работает и на нескольких других UNIX системах,
