[1.14] try to change encoding - openssh/usage/ssh-stats.html

--- a/openssh/usage/ssh-stats.html
+++ b/openssh/usage/ssh-stats.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=koi8-r">
+<meta http-equiv="Content-Type" content="text/html; charset=uft-8">
 <title>Статистика результатов сканирования</title>
 </head>
 <body BGCOLOR="#FFFFFF" TEXT="#000000" LINK="#23238E">
