[1.12] try to change encoding - openssh/usage/index.html

--- a/openssh/usage/index.html
+++ b/openssh/usage/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
 <head>
-<title>Использование SSH</title>
+<title>п≤я│п©п╬п╩я▄п╥п╬п╡п╟п╫п╦п╣ SSH</title>
 <link rev="made" href="mailto:www@openbsd.org">
 <meta name="resource-type" content="document">
-<meta http-equiv="Content-Type" content="text/html; charset=koi8-r">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="description" content="SSH usage profiling">
 <meta name="keywords" content="SSH scanning profiling usage internet">
 <meta name="distribution" content="global">
@@ -13,9 +13,9 @@
 <table width="100%" border="0" cellspacing="0" cellpadding="4">
 <tr>
 <td bgcolor="99bbed" rowspan="2" valign=top>
-<h3><a href="index.html">Главная</a></h3>
-<h3><a href="ssh-stats.html">Статистика</a></h3>
-<h3><a href="graphs.html">Графики</a></h3>
+<h3><a href="index.html">п⌠п╩п╟п╡п╫п╟я▐</a></h3>
+<h3><a href="ssh-stats.html">п║я┌п╟я┌п╦я│я┌п╦п╨п╟</a></h3>
+<h3><a href="graphs.html">п⌠я─п╟я└п╦п╨п╦</a></h3>
 <h3><a href="http://www.monkey.org/~provos/scanssh/">ScanSSH</a></h3>
 </td>
     <td bgcolor="eebb55" rowspan="2"><font size="1">&nbsp;</font></td>
@@ -25,43 +25,43 @@
 <img src="scan.gif" alt=Scan>
 </center>
 <center>
-<h2>Графики последних измерений</h2>
+<h2>п⌠я─п╟я└п╦п╨п╦ п©п╬я│п╩п╣п╢п╫п╦я┘ п╦п╥п╪п╣я─п╣п╫п╦п╧</h2>
 <table>
 <tr><td>
 <a href="graphs.html"><img src="graphs/internet-versions-tiny.png" alt=Versions></a>
 <p>
-<center>Используемые в интернете версии SSH.</center>
+<center>п≤я│п©п╬п╩я▄п╥я┐п╣п╪я▀п╣ п╡ п╦п╫я┌п╣я─п╫п╣я┌п╣ п╡п╣я─я│п╦п╦ SSH.</center>
 </td><td>
 <a href="graphs.html"><img src="graphs/internet-type-tiny.png" alt=Type></a>
 <p>
-<center>Используемые в интернете реализации SSH.</center>
+<center>п≤я│п©п╬п╩я▄п╥я┐п╣п╪я▀п╣ п╡ п╦п╫я┌п╣я─п╫п╣я┌п╣ я─п╣п╟п╩п╦п╥п╟я├п╦п╦ SSH.</center>
 </td></tr>
 </table>
 </center>
 <center>
-<h1>Распространение SSH</h1>
+<h1>п═п╟я│п©я─п╬я│я┌я─п╟п╫п╣п╫п╦п╣ SSH</h1>
 </center>
-<p> Эта машина используется для сбора статистики об используемых в интернете
-версий Secure Shell (SSH). Этот проект очень похож на 
+<p> п╜я┌п╟ п╪п╟я┬п╦п╫п╟ п╦я│п©п╬п╩я▄п╥я┐п╣я┌я│я▐ п╢п╩я▐ я│п╠п╬я─п╟ я│я┌п╟я┌п╦я│я┌п╦п╨п╦ п╬п╠ п╦я│п©п╬п╩я▄п╥я┐п╣п╪я▀я┘ п╡ п╦п╫я┌п╣я─п╫п╣я┌п╣
+п╡п╣я─я│п╦п╧ Secure Shell (SSH). п╜я┌п╬я┌ п©я─п╬п╣п╨я┌ п╬я┤п╣п╫я▄ п©п╬я┘п╬п╤ п╫п╟ 
 <a href="http://www.netcraft.com/survey/">Netcraft Web Server Survey</a>.
-Мы собираем и сопоставляем информацию о случайно выбранных узлах в сети,
-а именно об используемых ими SSH-серверах, т.е. подключаемся к каждому из них,
-чтобы определить тип и версию SSH-демона, а так же версию используемого им
-SSH-протокола. Полученные результаты будут опубликованны в виде статистики
-использования протокола SSH в сети интернет в целом. Мы намерены опубликовать
-наши результаты в интернете и на предстоящей конференции Usenix.
+п°я▀ я│п╬п╠п╦я─п╟п╣п╪ п╦ я│п╬п©п╬я│я┌п╟п╡п╩я▐п╣п╪ п╦п╫я└п╬я─п╪п╟я├п╦я▌ п╬ я│п╩я┐я┤п╟п╧п╫п╬ п╡я▀п╠я─п╟п╫п╫я▀я┘ я┐п╥п╩п╟я┘ п╡ я│п╣я┌п╦,
+п╟ п╦п╪п╣п╫п╫п╬ п╬п╠ п╦я│п©п╬п╩я▄п╥я┐п╣п╪я▀я┘ п╦п╪п╦ SSH-я│п╣я─п╡п╣я─п╟я┘, я┌.п╣. п©п╬п╢п╨п╩я▌я┤п╟п╣п╪я│я▐ п╨ п╨п╟п╤п╢п╬п╪я┐ п╦п╥ п╫п╦я┘,
+я┤я┌п╬п╠я▀ п╬п©я─п╣п╢п╣п╩п╦я┌я▄ я┌п╦п© п╦ п╡п╣я─я│п╦я▌ SSH-п╢п╣п╪п╬п╫п╟, п╟ я┌п╟п╨ п╤п╣ п╡п╣я─я│п╦я▌ п╦я│п©п╬п╩я▄п╥я┐п╣п╪п╬пЁп╬ п╦п╪
+SSH-п©я─п╬я┌п╬п╨п╬п╩п╟. п÷п╬п╩я┐я┤п╣п╫п╫я▀п╣ я─п╣п╥я┐п╩я▄я┌п╟я┌я▀ п╠я┐п╢я┐я┌ п╬п©я┐п╠п╩п╦п╨п╬п╡п╟п╫п╫я▀ п╡ п╡п╦п╢п╣ я│я┌п╟я┌п╦я│я┌п╦п╨п╦
+п╦я│п©п╬п╩я▄п╥п╬п╡п╟п╫п╦я▐ п©я─п╬я┌п╬п╨п╬п╩п╟ SSH п╡ я│п╣я┌п╦ п╦п╫я┌п╣я─п╫п╣я┌ п╡ я├п╣п╩п╬п╪. п°я▀ п╫п╟п╪п╣я─п╣п╫я▀ п╬п©я┐п╠п╩п╦п╨п╬п╡п╟я┌я▄
+п╫п╟я┬п╦ я─п╣п╥я┐п╩я▄я┌п╟я┌я▀ п╡ п╦п╫я┌п╣я─п╫п╣я┌п╣ п╦ п╫п╟ п©я─п╣п╢я│я┌п╬я▐я┴п╣п╧ п╨п╬п╫я└п╣я─п╣п╫я├п╦п╦ Usenix.
 
-<p> Мы <em>не собираемся</em> делать что-то большее, чем беглый и поверхностный
-взгляд на вывод при подключении к Вашему SSH-серверу. Сканер не будет пытаться
-войти на Вашу машину. Никакие повторные соединения к Вашей машине установленны
-не будут, поскольку сканер выбирает только случайные адреса в сети.
+<p> п°я▀ <em>п╫п╣ я│п╬п╠п╦я─п╟п╣п╪я│я▐</em> п╢п╣п╩п╟я┌я▄ я┤я┌п╬-я┌п╬ п╠п╬п╩я▄я┬п╣п╣, я┤п╣п╪ п╠п╣пЁп╩я▀п╧ п╦ п©п╬п╡п╣я─я┘п╫п╬я│я┌п╫я▀п╧
+п╡п╥пЁп╩я▐п╢ п╫п╟ п╡я▀п╡п╬п╢ п©я─п╦ п©п╬п╢п╨п╩я▌я┤п╣п╫п╦п╦ п╨ п▓п╟я┬п╣п╪я┐ SSH-я│п╣я─п╡п╣я─я┐. п║п╨п╟п╫п╣я─ п╫п╣ п╠я┐п╢п╣я┌ п©я▀я┌п╟я┌я▄я│я▐
+п╡п╬п╧я┌п╦ п╫п╟ п▓п╟я┬я┐ п╪п╟я┬п╦п╫я┐. п²п╦п╨п╟п╨п╦п╣ п©п╬п╡я┌п╬я─п╫я▀п╣ я│п╬п╣п╢п╦п╫п╣п╫п╦я▐ п╨ п▓п╟я┬п╣п╧ п╪п╟я┬п╦п╫п╣ я┐я│я┌п╟п╫п╬п╡п╩п╣п╫п╫я▀
+п╫п╣ п╠я┐п╢я┐я┌, п©п╬я│п╨п╬п╩я▄п╨я┐ я│п╨п╟п╫п╣я─ п╡я▀п╠п╦я─п╟п╣я┌ я┌п╬п╩я▄п╨п╬ я│п╩я┐я┤п╟п╧п╫я▀п╣ п╟п╢я─п╣я│п╟ п╡ я│п╣я┌п╦.
 
-<p> Никакой информации об адресах или доменах никому вне проекта передаваться не
-будет. Мы <em>не будем публиковать никаких подробностей</em> о том, какие узлы работают под
-управлением какой версии.
+<p> п²п╦п╨п╟п╨п╬п╧ п╦п╫я└п╬я─п╪п╟я├п╦п╦ п╬п╠ п╟п╢я─п╣я│п╟я┘ п╦п╩п╦ п╢п╬п╪п╣п╫п╟я┘ п╫п╦п╨п╬п╪я┐ п╡п╫п╣ п©я─п╬п╣п╨я┌п╟ п©п╣я─п╣п╢п╟п╡п╟я┌я▄я│я▐ п╫п╣
+п╠я┐п╢п╣я┌. п°я▀ <em>п╫п╣ п╠я┐п╢п╣п╪ п©я┐п╠п╩п╦п╨п╬п╡п╟я┌я▄ п╫п╦п╨п╟п╨п╦я┘ п©п╬п╢я─п╬п╠п╫п╬я│я┌п╣п╧</em> п╬ я┌п╬п╪, п╨п╟п╨п╦п╣ я┐п╥п╩я▀ я─п╟п╠п╬я┌п╟я▌я┌ п©п╬п╢
+я┐п©я─п╟п╡п╩п╣п╫п╦п╣п╪ п╨п╟п╨п╬п╧ п╡п╣я─я│п╦п╦.
 
-<p> Статистику, полученную на основании результатов сканирования, можно найти
-<a href="ssh-stats.html">тут</a>. Сканирование проводилось при помощи
+<p> п║я┌п╟я┌п╦я│я┌п╦п╨я┐, п©п╬п╩я┐я┤п╣п╫п╫я┐я▌ п╫п╟ п╬я│п╫п╬п╡п╟п╫п╦п╦ я─п╣п╥я┐п╩я▄я┌п╟я┌п╬п╡ я│п╨п╟п╫п╦я─п╬п╡п╟п╫п╦я▐, п╪п╬п╤п╫п╬ п╫п╟п╧я┌п╦
+<a href="ssh-stats.html">я┌я┐я┌</a>. п║п╨п╟п╫п╦я─п╬п╡п╟п╫п╦п╣ п©я─п╬п╡п╬п╢п╦п╩п╬я│я▄ п©я─п╦ п©п╬п╪п╬я┴п╦
 <a href="http://www.monkey.org/~provos/scanssh/">scanssh</a>.
 <p>
 <hr>
