--- a/openssh/usage/ssh-stats.html
+++ b/openssh/usage/ssh-stats.html
@@ -1,17 +1,17 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=uft-8">
-<title>Статистика результатов сканирования</title>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<title>п║я┌п╟я┌п╦я│я┌п╦п╨п╟ я─п╣п╥я┐п╩я▄я┌п╟я┌п╬п╡ я│п╨п╟п╫п╦я─п╬п╡п╟п╫п╦я▐</title>
 </head>
 <body BGCOLOR="#FFFFFF" TEXT="#000000" LINK="#23238E">
-<h1>Статистика результатов сканирования</h1>
-Статистические данные собраны в июле 2008 на основе результатов сканирования версий SSH.
+<h1>п║я┌п╟я┌п╦я│я┌п╦п╨п╟ я─п╣п╥я┐п╩я▄я┌п╟я┌п╬п╡ я│п╨п╟п╫п╦я─п╬п╡п╟п╫п╦я▐</h1>
+п║я┌п╟я┌п╦я│я┌п╦я┤п╣я│п╨п╦п╣ п╢п╟п╫п╫я▀п╣ я│п╬п╠я─п╟п╫я▀ п╡ п╦я▌п╩п╣ 2008 п╫п╟ п╬я│п╫п╬п╡п╣ я─п╣п╥я┐п╩я▄я┌п╟я┌п╬п╡ я│п╨п╟п╫п╦я─п╬п╡п╟п╫п╦я▐ п╡п╣я─я│п╦п╧ SSH.
 
-<h2>Интернет в июле 2008</h2>
-Размер выборки: 2<sup>25</sup> случайных адресов
+<h2>п≤п╫я┌п╣я─п╫п╣я┌ п╡ п╦я▌п╩п╣ 2008</h2>
+п═п╟п╥п╪п╣я─ п╡я▀п╠п╬я─п╨п╦: 2<sup>25</sup> я│п╩я┐я┤п╟п╧п╫я▀я┘ п╟п╢я─п╣я│п╬п╡
 
-<h4>Различные версии протокола:</h4>
+<h4>п═п╟п╥п╩п╦я┤п╫я▀п╣ п╡п╣я─я│п╦п╦ п©я─п╬я┌п╬п╨п╬п╩п╟:</h4>
 <table border=0>
 <tr><td align=right>  0.01 %</td><td>&nbsp;</td><td>1.0</td></tr>
 <tr><td align=right>  3.11 %</td><td>&nbsp;</td><td>1.5</td></tr>
@@ -20,7 +20,7 @@
 <tr><td align=right>  0.00 %</td><td>&nbsp;</td><td>2.99</td></tr>
 </table>
 
-<h4>Различные SSH-демоны:</h4>
+<h4>п═п╟п╥п╩п╦я┤п╫я▀п╣ SSH-п╢п╣п╪п╬п╫я▀:</h4>
 <table noborder>
 <tr><td align=right>  1.44 %</td><td>&nbsp;</td><td>Cisco-1.5</td></tr>
 <tr><td align=right>  3.10 %</td><td>&nbsp;</td><td>Cisco-1.99</td></tr>
@@ -45,7 +45,7 @@
 <a href="mailto:www@openbsd.org">www@openbsd.org</a>
 <br>
 <hr>
-<em>This site Copyright © 2001-2008 OpenBSD.</em><br>
+<em>This site Copyright &copy; 2001-2008 OpenBSD.</em><br>
 <small>
 <!--
 Originally [OpenBSD: ssh-stats.html,v 1.13 ]<br>
