--- a/openssh/usage/graphs.html
+++ b/openssh/usage/graphs.html
@@ -1,10 +1,10 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
 <head>
-<title>Использование SSH протокола</title>
+<title>п≤я│п©п╬п╩я▄п╥п╬п╡п╟п╫п╦п╣ SSH п©я─п╬я┌п╬п╨п╬п╩п╟</title>
 <link rev="made" href="mailto:www@openbsd.org">
 <meta name="resource-type" content="document">
-<meta http-equiv="Content-Type" content="text/html; charset=koi8-r">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="description" content="SSH usage profiling">
 <meta name="keywords" content="SSH scanning profiling usage internet">
 <meta name="distribution" content="global">
@@ -13,20 +13,20 @@
 <table width="100%" border="0" cellspacing="0" cellpadding="4">
 <tr>
 <td bgcolor="99bbed" rowspan="2" valign=top>
-<h3><a href="index.html">Главная</a></h3>
-<h3><a href="ssh-stats.html">Статистика</a></h3>
-<h3><a href="graphs.html">Графики</a></h3>
+<h3><a href="index.html">п⌠п╩п╟п╡п╫п╟я▐</a></h3>
+<h3><a href="ssh-stats.html">п║я┌п╟я┌п╦я│я┌п╦п╨п╟</a></h3>
+<h3><a href="graphs.html">п⌠я─п╟я└п╦п╨п╦</a></h3>
 <h3><a href="http://www.monkey.org/~provos/scanssh/">ScanSSH</a></h3>
 </td>
     <td bgcolor="eebb55" rowspan="2"><font size="1">&nbsp;</font></td>
     <td bgcolor="ffffff" valign="top">
 
-<h1>Графики</h1>
-<h2>Версия SSH-протокола, используемого в интернете, с течением времени</h2>
+<h1>п⌠я─п╟я└п╦п╨п╦</h1>
+<h2>п▓п╣я─я│п╦я▐ SSH-п©я─п╬я┌п╬п╨п╬п╩п╟, п╦я│п©п╬п╩я▄п╥я┐п╣п╪п╬пЁп╬ п╡ п╦п╫я┌п╣я─п╫п╣я┌п╣, я│ я┌п╣я┤п╣п╫п╦п╣п╪ п╡я─п╣п╪п╣п╫п╦</h2>
 
 <center><a href="graphs/internet-versions.png"><img src="graphs/internet-versions-small.png" alt=Protocol_to_Time border=0></a></center>
 <p>
-<h2>Процентное соотношение используемых в сети релизаций SSH</h2>
+<h2>п÷я─п╬я├п╣п╫я┌п╫п╬п╣ я│п╬п╬я┌п╫п╬я┬п╣п╫п╦п╣ п╦я│п©п╬п╩я▄п╥я┐п╣п╪я▀я┘ п╡ я│п╣я┌п╦ я─п╣п╩п╦п╥п╟я├п╦п╧ SSH</h2>
 <center><a href="graphs/internet-type.png"><img src="graphs/internet-type-small.png" alt=Implementation_to_Time border=0></a></center>
 <hr>
 <a href="index.html"><img height=24 width=24 src="../../back.gif" border=0 alt=OpenSSH></a>
