[1.13] fix link to back.gif - openssh/usage/graphs.html

--- a/openssh/usage/graphs.html
+++ b/openssh/usage/graphs.html
@@ -29,7 +29,7 @@
 <h2>Процентное соотношение используемых в сети релизаций SSH</h2>
 <center><a href="graphs/internet-type.png"><img src="graphs/internet-type-small.png" alt=Implementation_to_Time border=0></a></center>
 <hr>
-<a href="index.html"><img height=24 width=24 src="../../back.gif" border=0 alt=OpenSSH></a>
+<a href="index.html"><img height=24 width=24 src="../back.gif" border=0 alt=OpenSSH></a>
 <a href="mailto:www@openbsd.org">www@openbsd.org</a>
 <br>
 <hr>
