--- a/openssh/usage/ssh-stats.html
+++ b/openssh/usage/ssh-stats.html
@@ -41,7 +41,7 @@
 <tr><td align=right>  0.61 %</td><td>&nbsp;</td><td>Sun-2.0</td></tr>
 </table>
 <hr>
-<a href="index.html"><img height=24 width=24 src="../../back.gif" border=0 alt=OpenSSH></a>
+<a href="index.html"><img height=24 width=24 src="../back.gif" border=0 alt=OpenSSH></a>
 <a href="mailto:www@openbsd.org">www@openbsd.org</a>
 <br>
 <hr>
