[1.371] update link to releasenotes - openssh/index.html

--- a/openssh/index.html
+++ b/openssh/index.html
@@ -13,7 +13,7 @@
 <header>Проект OpenSSH</header>
 <ul>
 	<li><a href="goals.html">Цели проекта</a>
-	<li><a href="https://www.openssh.com/releasenotes.html">Release Notes</a>
+	<li><a href="releasenotes.html">Release Notes</a>
 	<li><a href="history.html">История</a>
 	<li><a href="features.html">Возможности</a>
 	<li><a href="security.html">Безопасность</a>
@@ -52,7 +52,7 @@
 <p id="callout">
 
 Релиз
-<a href="https://www.openbsd.org/openssh/releasenotes.html#9.9p1">OpenSSH 9.9</a>
+<a href="releasenotes.html#9.9p1">OpenSSH 9.9</a>
 состоялся 20 сентября 2024 года
 
 <p>
