--- a/security.html
+++ b/security.html
@@ -83,7 +83,8 @@ h3 {
 <a href="https://openbsd.org/errata72.html">7.2</a>,
 <a href="https://openbsd.org/errata73.html">7.3</a>,
 <a href="https://openbsd.org/errata74.html">7.4</a>,
-<a href="https://openbsd.org/errata75.html">7.5</a>.
+<a href="https://openbsd.org/errata75.html">7.5</a>,
+<a href="https://openbsd.org/errata76.html">7.6</a>.
 <br>
 <hr>
 
